<resources>
    <string name="app_name">Aura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ru">Russian</string>
    <string name="en">English</string>
    <string name="bonuses">bonuses</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="passportId">Passport ID</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="issued">Issued</string>
    <string name="addresses">Addresses</string>
    <string name="phones">Phones</string>
    <string name="mobile">Mobile</string>
    <string name="home_number">Home</string>
    <string name="home">Home</string>

    <string-array name="language_entries">
        <item>@string/ru</item>
        <item>@string/en</item>
    </string-array>

    <string-array name="entry_values">
        <item>ru</item>
        <item>en</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>